# rumiland_crm

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  UPDATE_AUTH.md  askama.toml  build.rs  git_diff.txt  migrate_auth.sql  package.json  rumiland.db.backup-2025-08-05-225036
src/: config.rs  error.rs  lib.rs  main.rs
src/db/: connection.rs  migrations.rs  mod.rs
src/handlers/: auth.rs  catalog.rs  customers.rs  health.rs  mod.rs  transactions.rs  users.rs
src/middleware/: auth.rs
src/models/: city.rs  customer.rs  mod.rs  product.rs  session.rs  transactions.rs  user.rs
src/templates/: auth.rs  catalog.rs  customers.rs  errors.rs  mod.rs  transactions.rs  users.rs
src/utils/: email.rs  flash.rs  localization.rs  mod.rs  password.rs  phone.rs
static/css/: styles.css
static/js/: add-customer-form.js  add-user-form.js  customer-form.js  dev-helper.js  edit-customer-form.js  error-handler.js  form-debug.js  main.js
static/scss/: QUICK-REFERENCE.md  README.md  STRUCTURE.md  styles.scss
static/scss/abstracts/: _mixins.scss  _variables.scss
static/scss/base/: _animations.scss  _reset.scss  _typography.scss
static/scss/components/: _alerts.scss  _badges.scss  _buttons.scss  _cards.scss  _datepicker.scss  _details.scss  _empty-states.scss  _flash-messages.scss  _forms.scss  _spinners.scss  _tables.scss
static/scss/layout/: _container.scss  _footer.scss  _navbar.scss
static/scss/utilities/: _responsive.scss  _spacing.scss  _text.scss
templates/: add.html  add_product.html  add_transaction.html  add_user.html  base.html  catalog.html  detail.html  edit.html  edit_product.html  edit_transaction.html  error.html  form_errors.html  list.html  login.html  network_error.html  product_detail.html  users.html
tests/: integration_test.rs
tools/: create_admin.rs  normalize_phones.sql
