[package]
name = "rumiland_crm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
askama = "0.12"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

# Authentication dependencies
bcrypt = "0.15"  # For password hashing
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed"] }  # For sessions
uuid = { version = "1.6", features = ["v4", "serde"] }  # For session IDs
chrono = { version = "0.4", features = ["serde"] }  # For timestamps

[build-dependencies]
